Travel::Status::DE::URA UNRELEASED

    * Add support for departures in Mainz supplied by the local URA service

Travel::Status::DE::URA 2.00 - Wed Sep 07 2016

    * Add support for bus departures in London supplied by the TfL URA
      service
    * New module: Travel::Status::GB::TFL
    * Rename aseag-m to ura-m
    * Rename short option -s (corresponding to --strftime) to -f
    * Rename short option -S (corresponding to --strfrel) to -F
    * New options:
      -s / --service selects a backend service (defaults to ASEAG),
      --list lists supported backend services,
      --ura-base sets a backend service by URL, and
      --ura-version sets the backend service version
    * Travel::Status::DE::URA::Result: Add ->platform accessor (shortcut for
      ->stop_indicator)

Travel::Status::DE::URA 1.02 - Sat Apr 16 2016

    * Result: Add stop_indicator accessor
    * aseag-m: New option -oi (show stop point indicators)

Travel::Status::DE::URA 1.01 - Sat Apr 09 2016

    * URA->results: Add via_id, stop_id and line_id parameters
    * URA->new: Add circle and with_stops parameters
    * URA: Add get_stops accessor

Travel::Status::DE::URA 1.00 - Sat Oct 31 2015

    * Reduce memory footprint
    * aseag-m: -of: Show delimiter between route before and after the
      requseted stop
    * aseag-m: Do not erroneously reverse stop list when combining -oa and -ob

Travel::Status::DE::URA 0.05 - Mon Oct 12 2015

    * aseag-m: Rename -a / -b / -f / -r to -oa / -ob / -of / -oT
    * aseag-m: New option -or (show partial route)
    * URA->new: Rename full_routes option to calculate_routes. The before/after
      parameters are no longer supported, instead any true parameter causes
      all routes to be calculated
    * URA::Result: Remove route_timetable accessor. Use route_pre / route_post
      instead
    * Ura::Result: Add route_pre, route_post and route_interesting accessors
    * new module: Travel::Status::DE::URA::Stop (describes a stop as a part