@@ -351,7 +351,7 @@ sub get_services {
 			ura_base    => 'http://ura.itcs.mvg-mainz.de/interfaces/ura',
 			ura_version => 1,
 			name        => 'MVG Mainz',
-			shortname   => 'mvg-mainz',
+			shortname   => 'MvgMainz',
 		},
 		{
 			ura_base    => 'http://countdown.api.tfl.gov.uk/interfaces/ura',
