@@ -1,6 +1,7 @@
 Travel::Status::DE::URA UNRELEASED
 
     * Add support for departures in Mainz supplied by the local URA service
+    * New module: Travel::Status::DE::MvgMainz
 
 Travel::Status::DE::URA 2.00 - Wed Sep 07 2016
 
